Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -157,11 +157,15 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/tab--2112689675</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
 
 <li>$:/status/RequireReloadDueToPluginChange</li>
+
+<li>$:/status/UserName</li>
 
 <li>$:/StoryList</li>
 
@@ -10068,14 +10072,20 @@ Error message and password prompt
 <div created="20210304193311122" modified="20210304193316821" title="$:/SiteTitle">
 <pre>Larry's Place on the Web</pre>
 </div>
-<div created="20210304193330319" modified="20210304193330319" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210304194141233" creator="larry" modified="20210304194159505" modifier="larry" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Basics</pre>
+</div>
+<div created="20210304193330319" creator="larry" modified="20210304194228057" modifier="larry" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Settings</pre>
 </div>
 <div created="20210304193333622" modified="20210304193333622" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
+</div>
+<div created="20210304194106370" creator="l" modified="20210304194106897" modifier="larr" title="$:/status/UserName">
+<pre>larry</pre>
 </div>
 <div created="20210304193325519" list="GettingStarted $:/ControlPanel" modified="20210304193325519" title="$:/StoryList">
 <pre></pre>
