--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@ Error message and password prompt
 
 <li>$:/core</li>
 
+<li>$:/DefaultTiddlers</li>
+
 <li>$:/GitHub/Branch</li>
 
 <li>$:/GitHub/Filename</li>
@@ -10056,6 +10058,10 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20210304200931024" creator="larry" modified="20210304200931024" modifier="larry" title="$:/DefaultTiddlers">
+<pre>
+</pre>
+</div>
 <div created="20210304193356110" modified="20210304193358760" title="$:/GitHub/Branch">
 <pre>tiddlywiki</pre>
 </div>
@@ -10080,8 +10086,8 @@ Error message and password prompt
 <div created="20210304194141233" creator="larry" modified="20210304194159505" modifier="larry" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20210304193330319" creator="larry" modified="20210304200844144" modifier="larry" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210304193330319" creator="larry" modified="20210304200911696" modifier="larry" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20210304193333622" creator="larry" modified="20210304200854944" modifier="larry" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
