--- a/TODO/index.html
+++ b/TODO/index.html
@@ -1,8 +1,8 @@
 <h1>To-Do</h1>
-<ul>
-<li>Include post excerpts from posts in main page</li>
-<li>Limit number of posts shown on main page</li>
-<li>Provide access to older posts not shown on main page</li>
-<li>Enable comments</li>
-<li>Setup GitHub Pages publish on commit to main/master</li>
-</ul>
+<p>[] - Include post excerpts from posts in main page
+[] - Limit number of posts shown on main page
+[] - Provide access to older posts not shown on main page
+[] - Enable comments
+[] - Setup GitHub Pages publish on commit to main/master
+[] - Layout for static pages
+[] - Reference posts by tags</p>
