--- a/drafts/2021-03-05-test-post/index.html
+++ b/drafts/2021-03-05-test-post/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="c">
       <header class="mb3">
-  <h1 class="tc mb0"><a href="/">Techn0mad</a></h1>
+  <h1 class="tc mb0"><a href="https://techn0mad.github.io/techn0mad.github.io">Techn0mad</a></h1>
 </header>
 
       <h1>Test Post</h1>
@@ -62,7 +62,7 @@ void main(int argc, char **argv)
       <hr /> 
 
       <div>
-        <a href="/">← Back</a>
+        <a href="/techn0mad/">← Back</a>
       </div>
     </div>
   </body>
