--- a/drafts/2021-07-20-the-game-is-afoot/index.html
+++ b/drafts/2021-07-20-the-game-is-afoot/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="c">
       <header class="mb3">
-  <h1 class="tc mb0"><a href="https://techn0mad.github.io/techn0mad.github.io">Techn0mad</a></h1>
+  <h1 class="tc mb0"><a href="https://github.com/techn0mad/techn0mad.github.io">Techn0mad</a></h1>
 </header>
 
       <h1>The Game is Afoot</h1>
@@ -52,7 +52,7 @@ going on in the shack too.</p>
       <hr /> 
 
       <div>
-        <a href="/techn0mad/">← Back</a>
+        <a href="/">← Back</a>
       </div>
     </div>
   </body>
