Rolling back to Jekyll blog

--- a/404.html
+++ b/404.html
@@ -1,21 +1,24 @@
 ---
-permalink: 404.html
+layout: default
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Not Found</title>
-  </head>
-  <body>
-    <div class="c">
-      <h1>File not found!!</h1>
-      <div class="back-link">
-        Go <a href="/">Home</a>
-      </div>
-    </div>
-  </body>
-</html>
+<style type="text/css" media="screen">
+  .container {
+    margin: 10px auto;
+    max-width: 600px;
+    text-align: center;
+  }
+  h1 {
+    margin: 30px 0;
+    font-size: 4em;
+    line-height: 1;
+    letter-spacing: -1px;
+  }
+</style>
+
+<div class="container">
+  <h1>404</h1>
+
+  <p><strong>Page not found :(</strong></p>
+  <p>The requested page could not be found.</p>
+</div>
